# clip-embeddings-api

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  load-model.py  pyproject.toml
.github/workflows/: python-app.yml
app/: app.py  main.py
config/: nginx-config.json
tests/: test_main.py
