[tool.poetry]
name = "clip-embeddings-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
sentence-transformers = "^2.2.2"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
